--- a/html/los/css/output/patterns/0-footer.css
+++ b/html/los/css/output/patterns/0-footer.css
@@ -6,33 +6,26 @@
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.pattern-dark {
-  background: url(../../assets/pattern-dark.png);
-  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
-  /* This trick ensures that our background SVG is only 
-    used in browsers that support it (a 'coincidence'
-    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
-
-.icon-pattern, .icon-pattern-dark {
+.icon-pattern {
   background-repeat: repeat; }
 
 .bg--darkest {
-  background-color: #222121; }
+  background-color: #112F0A; }
 
 .bg--dark {
-  background-color: #140431; }
+  background-color: #44693C; }
 
 .bg--mid {
-  background-color: #412773; }
+  background-color: #588D49; }
 
 .bg--light {
-  background-color: #B088BC; }
+  background-color: #6BB64C; }
 
 .bg--light-pastel {
-  background-color: #D8ADE5; }
+  background-color: #A1EA83; }
 
 .footer__top {
-  background-color: #140431;
+  background-color: #44693C;
   padding: 2em 8% 1.5em 8%; }
 
 .footer__top__report-issues {
@@ -93,7 +86,7 @@
   height: 5.8125em; }
 
 .footer__nav {
-  background-color: #392265;
+  background-color: #4d7c40;
   padding: 1.5em 8% 0.5em 8%;
   text-align: center; }
 
@@ -108,7 +101,7 @@
     border-bottom: 0.1em dotted #ffffff; }
 
 footer {
-  background-color: #140431;
+  background-color: #44693C;
   padding: 2.4em 8% 3.5em 8%;
   text-align: center; }
 
