--- a/html/los/css/output/patterns/0-header.css
+++ b/html/los/css/output/patterns/0-header.css
@@ -5,33 +5,26 @@
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.pattern-dark {
-  background: url(../../assets/pattern-dark.png);
-  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
-  /* This trick ensures that our background SVG is only 
-    used in browsers that support it (a 'coincidence'
-    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
-
-.icon-pattern, .icon-pattern-dark {
+.icon-pattern {
   background-repeat: repeat; }
 
 .bg--darkest {
-  background-color: #222121; }
+  background-color: #112F0A; }
 
 .bg--dark {
-  background-color: #140431; }
+  background-color: #44693C; }
 
 .bg--mid {
-  background-color: #412773; }
+  background-color: #588D49; }
 
 .bg--light {
-  background-color: #B088BC; }
+  background-color: #6BB64C; }
 
 .bg--light-pastel {
-  background-color: #D8ADE5; }
+  background-color: #A1EA83; }
 
 .header {
-  background-color: #140431;
+  background-color: #44693C;
   width: 100%;
   margin: 0;
   text-align: center; }
@@ -72,9 +65,9 @@
   padding: 0 8% 0 8%; }
 
 .header__search-trigger {
-  background-color: #412773;
+  background-color: #588D49;
   cursor: pointer;
-  border-bottom: 0.3em solid #2e1b51; }
+  border-bottom: 0.3em solid #3e6333; }
   .header__search-trigger .icon-search {
     width: 1.6875em;
     height: 1.75em;
@@ -91,7 +84,7 @@
 
 .header__part--search {
   background-position: right top;
-  border-bottom: 0.3em solid #140431; }
+  border-bottom: 0.3em solid #44693C; }
   .header__part--search form {
     background-color: inherit;
     margin: 0;
@@ -116,11 +109,11 @@
     font-weight: 600; }
   .header__part--search input[type="text"] {
     font-size: 1.1em;
-    border: 0.135em solid #B088BC;
+    border: 0.135em solid #6BB64C;
     padding: 0.36em;
     height: 2.1375em; }
     .header__part--search input[type="text"]:focus {
-      border: 0.135em solid #D8ADE5; }
+      border: 0.135em solid #A1EA83; }
   .header__part--search input[type="text"], .header__part--search input[type="submit"] {
     width: 100%;
     margin: 0; }
@@ -130,16 +123,16 @@
     float: left; }
   .header__part--search input[type="submit"] {
     color: #ffffff;
-    background-color: #B088BC;
+    background-color: #6BB64C;
     font-size: 1.1em;
     outline: 0;
-    border: 0.135em solid #B088BC;
+    border: 0.135em solid #6BB64C;
     max-width: 4.55625em;
     height: 2.14em; }
     .header__part--search input[type="submit"]:focus, .header__part--search input[type="submit"]:hover {
-      background-color: #D8ADE5;
-      border: 0.135em solid #D8ADE5;
-      color: #412773; }
+      background-color: #A1EA83;
+      border: 0.135em solid #A1EA83;
+      color: #588D49; }
   .header__part--search .search__advanced {
     display: inline-block;
     font-size: 1em;
@@ -150,8 +143,8 @@
       border-color: #ffffff;
       color: #ffffff; }
     .header__part--search .search__advanced a:focus, .header__part--search .search__advanced a:hover {
-      color: #D8ADE5;
-      border-bottom: 0.1em dotted #B088BC; }
+      color: #A1EA83;
+      border-bottom: 0.1em dotted #6BB64C; }
   .header__part--search .form-item, .header__part--search .form-actions {
     margin: 0; }
 
