--- a/html/los/css/output/patterns/06-list-of-items.css
+++ b/html/los/css/output/patterns/06-list-of-items.css
@@ -6,37 +6,30 @@
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.pattern-dark {
-  background: url(../../assets/pattern-dark.png);
-  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
-  /* This trick ensures that our background SVG is only 
-    used in browsers that support it (a 'coincidence'
-    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
-
-.icon-pattern, .icon-pattern-dark {
+.icon-pattern {
   background-repeat: repeat; }
 
 .bg--darkest {
-  background-color: #222121; }
+  background-color: #112F0A; }
 
 .bg--dark {
-  background-color: #140431; }
+  background-color: #44693C; }
 
 .bg--mid {
-  background-color: #412773; }
+  background-color: #588D49; }
 
 .bg--light {
-  background-color: #B088BC; }
+  background-color: #6BB64C; }
 
 .bg--light-pastel {
-  background-color: #D8ADE5; }
+  background-color: #A1EA83; }
 
 .items {
   margin: 0 0 3em 0; }
 
 .items--block {
   padding: 1.5em 1.5em 1em 1.5em;
-  background-color: #e8ecf5; }
+  background-color: #dedfdf; }
 
 .items .heading__smallest {
   margin: 0 0 0.6em 0; }
@@ -47,8 +40,8 @@
 .items .items__item:before {
   content: "— "; }
 .items .items__item a:hover {
-  color: #140431;
-  border-color: #140431;
+  color: #44693C;
+  border-color: #44693C;
   border-bottom: 0.1em solid; }
 .items .items__item:after {
   content: " »"; }
@@ -56,10 +49,10 @@
 .items--block .items__item:before {
   content: none; }
 .items--block .items__item a {
-  color: #140431;
-  border-color: #140431; }
+  color: #44693C;
+  border-color: #44693C; }
 .items--block .items__item a:hover {
-  color: #0e0322;
+  color: #304a2a;
   border-bottom: 0.1em solid; }
 
 /*# sourceMappingURL=06-list-of-items.css.map */
