--- a/html/los/css/output/patterns/06-pagination.css
+++ b/html/los/css/output/patterns/06-pagination.css
@@ -5,30 +5,23 @@
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.pattern-dark {
-  background: url(../../assets/pattern-dark.png);
-  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
-  /* This trick ensures that our background SVG is only 
-    used in browsers that support it (a 'coincidence'
-    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
-
-.icon-pattern, .icon-pattern-dark {
+.icon-pattern {
   background-repeat: repeat; }
 
 .bg--darkest {
-  background-color: #222121; }
+  background-color: #112F0A; }
 
 .bg--dark {
-  background-color: #140431; }
+  background-color: #44693C; }
 
 .bg--mid {
-  background-color: #412773; }
+  background-color: #588D49; }
 
 .bg--light {
-  background-color: #B088BC; }
+  background-color: #6BB64C; }
 
 .bg--light-pastel {
-  background-color: #D8ADE5; }
+  background-color: #A1EA83; }
 
 /* Pagination */
 ol.pagination {
@@ -54,24 +47,24 @@ ol.pagination li {
   font-size: 1.1em;
   font-weight: 500;
   text-align: center;
-  background-color: #412773;
+  background-color: #588D49;
   color: #ffffff; }
   .pagination a:hover {
     text-decoration: underline;
-    background-color: #6381BF; }
+    background-color: #252626; }
 
 .pagination__current a {
-  background-color: #8F4F97;
+  background-color: red;
   color: #ffffff;
   cursor: not-allowed;
   border: none; }
   .pagination__current a:hover {
     text-decoration: underline;
     color: #ffffff;
-    background-color: #8F4F97; }
+    background-color: red; }
 
 .pagination__previous a, .pagination__next a {
-  background-color: #140431;
+  background-color: #44693C;
   color: #ffffff;
   border-bottom: none;
   padding: 0.35em 0.1em;
