--- a/html/los/css/output/patterns/06-subnavigation.css
+++ b/html/los/css/output/patterns/06-subnavigation.css
@@ -6,30 +6,23 @@
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.pattern-dark {
-  background: url(../../assets/pattern-dark.png);
-  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
-  /* This trick ensures that our background SVG is only 
-    used in browsers that support it (a 'coincidence'
-    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
-
-.icon-pattern, .icon-pattern-dark {
+.icon-pattern {
   background-repeat: repeat; }
 
 .bg--darkest {
-  background-color: #222121; }
+  background-color: #112F0A; }
 
 .bg--dark {
-  background-color: #140431; }
+  background-color: #44693C; }
 
 .bg--mid {
-  background-color: #412773; }
+  background-color: #588D49; }
 
 .bg--light {
-  background-color: #B088BC; }
+  background-color: #6BB64C; }
 
 .bg--light-pastel {
-  background-color: #D8ADE5; }
+  background-color: #A1EA83; }
 
 .subnav {
   margin: 0 0 4em 0; }
@@ -43,17 +36,17 @@
   list-style-type: none; }
 
 .subnav .subnav__item, .subnav .subnav__item.subnav__item--sub-parent {
-  color: #B088BC; }
+  color: #6BB64C; }
   .subnav .subnav__item:before, .subnav .subnav__item.subnav__item--sub-parent:before {
     content: "— "; }
   .subnav .subnav__item a:hover, .subnav .subnav__item.subnav__item--sub-parent a:hover {
-    color: #140431;
-    border-color: #140431;
+    color: #44693C;
+    border-color: #44693C;
     border-bottom: 0.1em solid; }
   .subnav .subnav__item ul li a, .subnav .subnav__item.subnav__item--sub-parent ul li a {
-    color: #9b3fa7; }
+    color: red; }
   .subnav .subnav__item ul li a.active, .subnav .subnav__item.subnav__item--sub-parent ul li a.active {
-    color: #140431; }
+    color: #44693C; }
 
 .subnav .subnav__item.subnav__item--parent {
   margin: 0 0 0.5em 0; }
@@ -61,19 +54,19 @@
     content: ""; }
   .subnav .subnav__item.subnav__item--parent a {
     font-weight: 400;
-    color: #140431;
-    border-color: #140431; }
+    color: #44693C;
+    border-color: #44693C; }
     .subnav .subnav__item.subnav__item--parent a:hover {
-      color: #412773;
-      border-color: #412773; }
+      color: #588D49;
+      border-color: #588D49; }
 
 .subnav .subnav__item.subnav__item--sub-parent a {
-  color: #140431;
-  border-color: #140431; }
+  color: #44693C;
+  border-color: #44693C; }
 
 .subnav .subnav__item a.active {
   border-bottom: none;
-  color: #140431;
+  color: #44693C;
   cursor: not-allowed; }
 
 /*# sourceMappingURL=06-subnavigation.css.map */
